fixed logo overlapping

--- a/src/main/resources/static/css/personalized.css
+++ b/src/main/resources/static/css/personalized.css
@@ -29,7 +29,9 @@ header {
 }
 
 header .logo img {
-    height: 150px; 
+    height: 15vh; 
+    max-height: 150px; 
+    width: auto;
 }
 
 .logout-btn {
